fix padding & margin spacing issue

--- a/themes/knives-forks-theme/sass/pages/_page-how.scss
+++ b/themes/knives-forks-theme/sass/pages/_page-how.scss
@@ -69,9 +69,10 @@
     }
     .how-title {
       font-size: 1.2rem;
-      margin-top: 0;
+      margin-top: -10px;
     }
     .entry-content {
+      padding: 5%;
       .how-img {
         width: 100%;
         height: 15em;
@@ -141,10 +142,6 @@
 @include tablet {
   .article-content {
     padding: 0;
-
-    .entry-header {
-      padding: 0 5%;
-    }
     .how-count {
       color: $secondary_orange_dark;
     }
